rfctools-common (0.5.17) distribhution(s); urgency=low

	* Remove Python 3.4 from the supported liste

-- Jim Schaad <ietf@augustcellars.com>  Fri 16 Aug 2019 12:00:00 -0700

rfctools-common (0.5.16) distribhution(s); urgency=low

	* Update the RNG schema file from XML2RFC drop v2.23.0

-- Jim Schaad <ietf@augustcellars.com>  Mon 1 July 2019 12:00:00 -0700

rfctools-common (0.5.15) distribhution(s); urgency=low

	* Use the correct function anywhere that we could write out UTF-8

-- Jim Schaad <ietf@augustcellars.com>  Mon 27 May 2019 12:00:00 -0700

rfctools-common (0.5.14) distribhution(s); urgency=low

	* Merge in some of the XML2RFC changes to these files
	* Setup to allow for the input coming from stdin
	* Clean things up so that pyflakes will pass, still has problems with PEP8

-- Jim Schaad <ietf@augustcellars.com>  Sun 21 Apr 2019 12:00:00 -0700

rfctools-common (0.5.12) distribution(s); urgency=low

	* Don't try and compress whitespace in entity nodes

-- Jim Schaad <ietf@augustcellars.com>  Fri 25 Jan 2019 12:00:00 -0700

rfctools-common (0.5.11) distribution(s); urgency=low

	* Add the info logging function for another output type
	* Add option to surpress populating default attributes from the DTD

-- Jim Schaad <ietf@augustcellars.com>  Tue 1 Jan 2019 12:00:00 -0700

rfctools-common (0.5.10) distribution(s); urgency=low

	* The no xinclude option is expanded to include processing <?rfc include=""?> PI

-- Jim Schaad <ietf@augustcellars.com>  XXX 2 Sept 2018 12:00:00 -0700

rfctools-common (0.5.6) distribution(s); urgency=low

	* Add option to not resolve entities for XML Linting
	* Fix problem with installing on a clean platform

-- Jim Schaad <ietf@augustcellars.com>  Mon 2 July 2018 12:00:00 -0700

rfctools-common (0.5.5) distribution(s); urgency=low

	* Correct problem with displaying utf8 strings

-- Jim Schaad <ietf@augustcellars.com>  Tue 12 JUNE 2018 12:00:00 -0700

rfctools-common (0.5.3) distribution(s); urgency=low
