@@ -1,1 +1,3 @@
-0.5.19
+rfclint = 0.6.0
+rfctools_common = 0.6.0
+svgcheck = 0.6.0
