@@ -1,2 +1,7 @@
-__version__  = '0.5.19'
+# ----------------------------------------------------
+# Copyright The IETF Trust 2018-9, All Rights Reserved
+# ----------------------------------------------------
+
+# Static values
+__version__  = '0.6.0'
 NAME = 'svgcheck'
