@@ -1,1 +1,2 @@
-0.5.18
+xmldiff = 0.6.0
+rfctools_common = 0.6.0
