@@ -1,5 +1,5 @@
 lxml>=4.1.1
 requests>=2.5.0
 six
-rfctools_common>=0.5.14
+rfctools_common>=0.6.0
 cffi>=1.0.0
